Initial commit-just public2

--- a/fa/about/index.html
+++ b/fa/about/index.html
@@ -194,7 +194,7 @@
 <p>سلام، به وبگاه شخصی من خوش آمدید!<br>
 من ناصر هستم و در حال حاضر سال آخر از دوره دکترای ویروس‌شناسی خاک در <a href="https://www.usherbrooke.ca/"  class="external-link" target="_blank" rel="noopener">دانشگاه شربوک</a> و <a href="https://agriculture.canada.ca/en"  class="external-link" target="_blank" rel="noopener">سازمان کشاورزی و غذا کانادا</a>  را سپری میکنم. یکی از علاقه‌های اصلی من برنامه‌نویسی پایتون و یافتن روش‌هایی برای بهره‌برداری از آن در پروژه‌های بیوانفورماتیکی است. این باعث شده که همواره از کار با داده‌های زیستی پیچیده برای استخراج نتایج معنادار از آن‌ها لذت ببرم!</p>
 <p>به عنوان سرگرمی و زمانی که در دنیای زیست‌شناسی یا برنامه‌نویسی نیستم، ترجیح میدهم کتاب‌هایی در مورد ذهن انسان، رازهای تکامل مولکولی و زیستی و یا ویدیوهای جذاب TED را مرور کنم. و یا گاهی به سادگی از تماشای سینمای کلاسیک لذت ببرم. تقاطع فناوری و زیست‌شناسی برای من فقط یک مسیر شغلی نیست؛ بلکه به گونه‌ای همیشه کنجکاوی‌ام را برانگیخته و نیروی محرکه من بوده است.</p>
-<p>در این وبسایت، می‌توانید مجموعه‌ای از نوشته‌ها و تجربیاتم در ارتباط با ویروس‌شناسی، بیوانفورماتیک و توسعه نرم‌افزار را پیدا کنید. اگر سوالی داشتید، پیام بدهید یا اطلاعات بیشتر را در فایل من پیدا کنید.</p>
+<p>در این وبسایت، می‌توانید مجموعه‌ای از نوشته‌ها و تجربیاتم در ارتباط با ویروس‌شناسی، بیوانفورماتیک و توسعه نرم‌افزار را پیدا کنید. اگر سوالی داشتید، پیام بدهید یا اطلاعات بیشتر را در رزومه من پیدا کنید.</p>
 
   </article>
 </section>
