--- a/about/index.html
+++ b/about/index.html
@@ -187,10 +187,10 @@
 
 <p>Hello, and welcome!<br>
 I&rsquo;m Naser, currently in the final year of my Ph.D. journey in soil virology at the <a href="https://www.usherbrooke.ca/"  class="external-link" target="_blank" rel="noopener">University of Sherbrooke</a> and <a href="https://agriculture.canada.ca/en"  class="external-link" target="_blank" rel="noopener">Agriculture and Agri Food Canada</a>.</p>
-<p>I&rsquo;m fascinated by using computers to decode complex biological data. Bioinformatics lets me combine my coding passion with the challenge of understanding intricate biology. I&rsquo;m constantly exploring new ways to use Python for bioinformatics projects.</p>
-<p>When I&rsquo;m not coding or working with biological data, I like diving into topics like molecular evolution or watching TED Talks on human cognition, they&rsquo;re always fascinating! Exploring the intersection of technology and biology isn&rsquo;t just my career; it&rsquo;s a personal passion that keeps me curious and driven.</p>
-<p>On this website, you&rsquo;ll find my thoughts and experiences as a researcher in the fields of bio/virology, bioinformatics, and software development. While I&rsquo;m not an active blogger, I occasionally share musings on life, work, and everything in between.</p>
-<p>I hope you enjoy your visit! Don&rsquo;t hesitate to drop me a line if you have any questions or just want to say hi!</p>
+<p>I&rsquo;m fascinated by using computers to decode complex biological data. Bioinformatics lets me combine my passion for coding with the challenge of understanding biological systems. For me, bridging technology and biology isn&rsquo;t just a career path; it&rsquo;s a personal passion that keeps me curious.</p>
+<p>When I&rsquo;m  not coding or looking at data, I enjoy reading about molecular evolution or human cognition! And to balance that out, I love getting outside for a bike ride or just re-watching classic movies.</p>
+<p>On this site, you&rsquo;ll find notes on my experiences as a researcher in bio/virology and bioinformatics, along with some software projects. I&rsquo;m not a daily blogger, but I occasionally share thoughts on research, life, and the things I&rsquo;m learning along the way.</p>
+<p>Thanks for stopping by! Feel free to drop me a line if you have a question or just want to say hi.</p>
 
   </article>
 </section>
