--- a/fr/about/index.html
+++ b/fr/about/index.html
@@ -185,13 +185,13 @@
          alt="My Image"/>
 </figure>
 
-<p>Salut et bienvenue sur mon site web !<br>
-Je m&rsquo;appelle Naser et je suis actuellement en dernière année de mon doctorat en virologie du sol à <a href="https://www.usherbrooke.ca/"  class="external-link" target="_blank" rel="noopener">l&rsquo;Université de Sherbrooke</a> et à <a href="https://agriculture.canada.ca/fr"  class="external-link" target="_blank" rel="noopener">Agriculture et Agroalimentaire Canada</a>.</p>
-<p>Je suis passionné par l&rsquo;utilisation de l&rsquo;informatique pour décoder des données biologiques complexes. La bioinformatique me permet de combiner ma passion pour la programmation avec le défi de démêler la biologie complexe. Je suis constamment à la recherche de nouvelles façons d&rsquo;utiliser Python pour des projets de bioinformatique.</p>
-<p>Lorsque je ne code pas ou ne travaille pas avec des données biologiques, j&rsquo;aime plonger dans des sujets comme l&rsquo;évolution moléculaire ou regarder des TED Talks sur la cognition humaine, ils sont toujours fascinants ! Explorer l&rsquo;intersection de la technologie et de la biologie n&rsquo;est pas seulement ma carrière ; c&rsquo;est une passion personnelle qui me garde curieux et motivé.</p>
-<p>Sur ce site, vous trouverez mes réflexions et expériences en tant que chercheur dans les domaines de la bio/virologie, de la bioinformatique et du développement logiciel. Bien que je ne sois pas un blogueur actif, je partage parfois des réflexions sur la vie, le travail et tout ce qui se trouve entre les deux.</p>
-<p>J&rsquo;espère que vous apprécierez votre visite ! N&rsquo;hésitez pas à me contacter si vous avez des questions ou si vous voulez simplement dire bonjour !</p>
-
+<p>Bonjour et bienvenue !<br>
+Je m'appelle Naser et je suis actuellement en dernière année de doctorat en virologie des sols à l'<a href="https://www.usherbrooke.ca/" class="external-link" target="_blank" rel="noopener">Université de Sherbrooke</a> et à <a href="https://agriculture.canada.ca/fr" class="external-link" target="_blank" rel="noopener">Agriculture et Agroalimentaire Canada</a>.</p>
+<p>Je suis fasciné par l'utilisation de l'informatique pour décoder des données biologiques complexes. La bioinformatique me permet de combiner ma passion pour la programmation avec le défi de comprendre les systèmes biologiques. Pour moi, faire le pont entre la technologie et la biologie n'est pas seulement une carrière, c'est une passion personnelle qui nourrit ma curiosité.</p>
+<p>Quand je ne suis pas en train de coder ou d'analyser des données, j'aime lire sur l'évolution moléculaire ou la cognition humaine. Pour équilibrer tout cela, j'adore sortir faire un tour de vélo ou simplement revoir des classiques du cinéma.</p>
+<p>Sur ce site, vous trouverez des notes sur mes expériences de chercheur en virologie et bioinformatique, ainsi que quelques projets logiciels. Je ne publie pas tous les jours, mais je partage occasionnellement des réflexions sur la recherche, la vie et ce que j'apprends en cours de route.</p>
+<p>Merci de votre visite ! N'hésitez pas à m'écrire si vous avez une question ou simplement pour dire bonjour.</p>
+    
   </article>
 </section>
 
