--- a/now/index.html
+++ b/now/index.html
@@ -200,7 +200,7 @@ Additionally, I&rsquo;m working on a beta version of a global viromics analysis 
 <p><strong>Where</strong><br>
 You can find me at the <a href="https://profils-profiles.science.gc.ca/en/research-centre/saint-jean-sur-richelieu-research-and-development-centre"  class="external-link" target="_blank" rel="noopener">Saint-Jean-sur-Richelieu Research and Development Centre (RDC)</a>, <a href="https://agriculture.canada.ca/en"  class="external-link" target="_blank" rel="noopener">Agriculture and Agri-Food Canada (AAFC)</a>.</p>
 <p><strong>Collaboration</strong><br>
-If you share an interest in my research and wish to collaborate or have any exciting ideas, feel free to <a href="mailto:me@poursalavati.com" >reach out</a>. Whether it&rsquo;s an invitation, a joint project, or simply a chance to geek out together!</p>
+If you work in a similar field or just want to chat about research, feel free to <a href="mailto:me@poursalavati.com" >reach out</a>. Whether it&rsquo;s an invitation, a joint project, or simply a chance to geek out together!</p>
 
   </article>
 </section>
