--- a/contact/index.html
+++ b/contact/index.html
@@ -191,7 +191,7 @@ Got an exciting project or idea that could use some collaborative magic? Looking
     </header>
 
     <p><strong>Hello there!</strong><br>
-Whether you have a project, a brilliant idea, or just want to share a friendly &ldquo;Hello,&rdquo; drop me a line at <a href="mailto:me@poursalavati.com" >me@poursalavati.com</a></p>
+Whether you have a specific project in mind, a question, or just want to send a friendly &ldquo;Hello,&rdquo; drop me a line at <a href="mailto:me@poursalavati.com" >me@poursalavati.com</a></p>
 <p><strong>What Can We Chat About?</strong></p>
 <ul>
 <li>Got an exciting project or idea that could use some collaborative magic?</li>
