Update contact page with collaboration options

--- a/contact/index.html
+++ b/contact/index.html
@@ -194,9 +194,9 @@ Got an exciting project or idea that could use some collaborative magic? Looking
 Whether you have a specific project in mind, a question, or just want to send a friendly &ldquo;Hello,&rdquo; drop me a line at <a href="mailto:me@poursalavati.com" >me@poursalavati.com</a></p>
 <p><strong>What Can We Chat About?</strong></p>
 <ul>
-<li>Got an exciting project or idea that could use some collaborative magic?</li>
-<li>Looking to dive into a creative venture or co-work on something awesome?</li>
-<li>Simply want to connect and share thoughts?</li>
+<li>Do you have a research idea that could use some bioinformatic support?</li>
+<li>Are you looking to collaborate on a coding or biology project?</li>
+<li>Do you simply want to connect and share thoughts?</li>
 </ul>
 
   </article>
